fixes, collapse button, citations, authors and author page

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -27,10 +27,15 @@ body {
   align-items: center;
 }
 
-label, ul {
+label, ul, ol {
   margin: 0px !important;
 }
 
 svg {
   margin: auto;
+}
+.tooltip {
+  background: #fff;
+  padding: 4px;
+  border-radius: 4px;
 }
